feat: secure commerce and add creator studio portal
